kubernetes/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cravecart-api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "cravecart-api-ip"
    networking.gke.io/managed-certificates: "cravecart-api-cert"
    networking.gke.io/v1beta1.FrontendConfig: "cravecart-frontend-config"
spec:
  rules:
  - host: api.cravecart.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3001
      - path: /restaurants
        pathType: Prefix
        backend:
          service:
            name: restaurant-service
            port:
              number: 5004
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5003
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 5005
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5002
      - path: /delivery
        pathType: Prefix
        backend:
          service:
            name: delivery-service
            port:
              number: 3005
